# loc

./: CMakeLists.txt  README.md
loc/: loc.hpp
tests/: data.json  tests.cpp
